# plex-watch-sync

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  example.config.yaml  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: release-please.yml  release.yml  test.yml
app/: config.py  main.py  plex_clients.py
tests/: conftest.py  test_reconcile.py  test_webhook.py
