[project]
name = "plex-watch-sync"
version = "0.2.0"
description = "Mirror Plex watched state and view-offset between multiple accounts on the same server, scoped by a Plex label."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "plex-watch-sync contributors" }]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "plexapi>=4.16,<5.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/tikibozo/plex-watch-sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
